fix spacing to padding: 10px

--- a/app/javascript/style/chat.scss
+++ b/app/javascript/style/chat.scss
@@ -101,7 +101,7 @@
 
   .stream-end {
     border-top: 1px solid color.$neutral-accents;
-    padding: 17px 10px;
+    padding: 10px;
 
     &--content {
       // layouts
